<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnEdit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/rename_button"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnCopy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:title="@string/copy_button"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnDelete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_button"
        app:showAsAction="always" />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
