<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnPaste"
        android:icon="@drawable/ic_content_paste_white_24dp"
        android:title="@string/paste_button"
        app:showAsAction="always" />
</menu>